<resources>
    <string name="app_name">Recipe Kitchen</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email_optional">Email(Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="register">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">Bio</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
</resources>